Fix Heading Alignment

--- a/css/medium.css
+++ b/css/medium.css
@@ -18,7 +18,7 @@
    }
 
    .headings {
-      padding-right: 0%;
+      padding-right: 2%;
    }
 
    nav ul li a, nav ul li a:visited {
